# diccid

./: CMakeLists.txt  CMakeLists.txt.gtest  README.md  circle.yml  docker_build.sh  nom.sh  release.sh  setup.sh
.circleci/: config.yml
.circleci/images/spraxtest/: Dockerfile  install-ompl-ubuntu-1.3.1.sh  install-ompl-ubuntu-1.3.2.sh
scripts/: set_env.sh
scripts/setup/mac/: install_prereqs
src/: CLI11.hpp  cli.cpp  cppc.cpp  dirpoll.cpp  main.cpp
tests/: file_util.cc  test_dir_poll.cc
